fix(broker): stop account link 502 and correct KIS sync totals